--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,12 +17,11 @@ layer(base);
   --color-current: currentColor;
   --color-transparent: transparent;
   --color-white: #ffffff;
-  --color-black: #121723;
-  --color-dark: #1d2430;
-  --color-primary: #E32222;
-;
+  --color-black: #000;
+  --color-dark: #212124;
+  --color-primary: #de2323;
   --color-yellow: #fbb040;
-  --color-bg-color-dark: #171c28;
+  --color-bg-color-dark: #000;
 
   --color-body-color: #788293;
   --color-body-color-dark: #959cb1;
@@ -41,7 +40,7 @@ layer(base);
   --color-gray-800: #1f2937;
   --color-gray-900: #111827;
   --color-gray-950: #030712;
-  --color-gray-dark: #2e1f1e;
+  --color-gray-dark: #000;
   --color-gray-light: #f9f0f0;
 
   --shadow-sign-up: 0px 5px 10px rgba(4, 10, 34, 0.2);
